<package>
  <name>samplebot_hrpsys_ros_bridge</name>
  <version>0.0.0</version>
  <description>sample package for using hrpsys_ros_bridge</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>

  <license>BSD</license>

  <!--url type="website">http://ros.org/wiki/hrpsys_trans_bridge</url-->

  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys_ros_bridge</build_depend>

  <run_depend>hrpsys_ros_bridge</run_depend>

  <export>
  </export>
</package>